--- a/src/Components/Modals/teaminfomodal.css
+++ b/src/Components/Modals/teaminfomodal.css
@@ -1,14 +1,24 @@
-.modal-dialog{
+.modal-dialog {
+  height: 100%;
+  margin: 0;
+  position: absolute;
+  right: 0;
+  min-width: 500px;
+  
+}
+.modal-content {
+  height: 100%;
+  border-radius: 0;
+}
+.modal-header {
+  border-radius: 0;
+}
+/* @media (max-width: 500px) {
+  .modal-dialog {
     height: 100%;
     margin: 0;
-    position: absolute;
-    right: 0;
-    min-width: 500px;
-}
-.modal-content{
-    height: 100%;
-    border-radius: 0;
-}
-.modal-header{
-    border-radius: 0;
-}
+    width: 100%;
+     position: absolute;
+    
+  }
+} */
